apps/serverless/openfaas/manifests/openfaas-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openfaas-gateway-route
  namespace: openfaas
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway-system
  hostnames:
    - openfaas.homelab.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gateway
          port: 8080
